fixed UI for CHLK-2987 "Withdrawn student indicator" not showing anywhere.

--- a/Chalkable.Web/assets/sass/partials/main/people/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/people/_list.scss
@@ -98,7 +98,7 @@
     margin: 8px;
   }
 
-  P{
+  P, .p{
     font-size: 20px;
     max-width: 438px;
     text-overflow: ellipsis;
