--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -65,6 +65,16 @@ img{
   border: none;
 }
 
+.withdrawn{
+  position: absolute;
+  background: #d45151;
+  height: 6px;
+  width: 6px;
+  @include border-radius(3px);
+  top: 29px;
+  right: -15px;
+}
+
 .clear{clear:both;}
 
 .clear-right{clear:right;}
